--- a/DailySelfie/app/src/main/res/drawable/box_with_thicc_border.xml
+++ b/DailySelfie/app/src/main/res/drawable/box_with_thicc_border.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:width="2dp" android:color="#16003B" />
-    <solid android:color="#F73D93" />
+    <stroke android:width="3dp" android:color="#16003B" />
+    <solid android:color="#E2C405" />
     <corners android:radius="5dp" />
     <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
 
